--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -60,50 +60,50 @@
                                         <label for="title" class="form-label">Title</label>
                                         <input type="text" id="title" name="review[title]" class="form-control" required>
                                     </div>
-                        <div>
-                            <fieldset class="starability-basic">
-                                <legend>First rating:</legend>
-                                <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
-                                <input type="radio" id="first-rate1" name="rating" value="1" />
-                                <label for="first-rate1" title="Terrible">1 star</label>
-                                <input type="radio" id="first-rate2" name="rating" value="2" />
-                                <label for="first-rate2" title="Not good">2 stars</label>
-                                <input type="radio" id="first-rate3" name="rating" value="3" />
-                                <label for="first-rate3" title="Average">3 stars</label>
-                                <input type="radio" id="first-rate4" name="rating" value="4" />
-                                <label for="first-rate4" title="Very good">4 stars</label>
-                                <input type="radio" id="first-rate5" name="rating" value="5" />
-                                <label for="first-rate5" title="Amazing">5 stars</label>
-                            </fieldset>
+                                    <div>
+                                        <fieldset class="starability-basic" name="review[rating]">
+                                            <legend>Rating:</legend>
+                                            <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
+                                            <input type="radio" id="first-rate1" name="rating" value="1" />
+                                            <label for="first-rate1" title="Terrible">1 star</label>
+                                            <input type="radio" id="first-rate2" name="rating" value="2" />
+                                            <label for="first-rate2" title="Not good">2 stars</label>
+                                            <input type="radio" id="first-rate3" name="rating" value="3" />
+                                            <label for="first-rate3" title="Average">3 stars</label>
+                                            <input type="radio" id="first-rate4" name="rating" value="4" />
+                                            <label for="first-rate4" title="Very good">4 stars</label>
+                                            <input type="radio" id="first-rate5" name="rating" value="5" />
+                                            <label for="first-rate5" title="Amazing">5 stars</label>
+                                        </fieldset>
+                                    </div>
+                                    <div>
+                                        <label class="form-label" for="body">Review</label>
+                                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="10" required   ></textarea>
+                                        <div class="valid-feedback">Looks Good!</div>
+                                    </div>
+                                <button class="btn btn-success">Submit</button>
+                            </div>
+                        </form>
+                    <% } %>
+                    <% for (let review of campground.reviews) { %>
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <div class="card-title d-flex" style="justify-content: space-between;">
+                                    <h4> <%= review.title %> </h4>
+                                    <p class="starability-result" data-rating="<%= review.rating %>"></p>
+                                </div>
+                                <p class="card-text"><%= review.body %> </p>
+                                <small class="card-text">Submitted by <%= review.author.username %></small>
+                                <% if (currentUser && review.author.equals(currentUser._id)) { %>
+                                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                                        <button class="btn btn-sm btn-danger">Delete</button>
+                                    </form>
+                                <% } %>
+                            </div>
                         </div>
-                        <div>
-                            <label class="form-label" for="body">Review</label>
-                            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="10" required   ></textarea>
-                            <div class="valid-feedback">Looks Good!</div>
-                        </div>
-                        <button class="btn btn-success">Submit</button>
-                    </div>
-                </form>
-            <% } %>
-            <% for (let review of campground.reviews) { %>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <div class="card-title d-flex" style="justify-content: space-between;">
-                            <h4> <%= review.title %> </h4>
-                            <p class="starability-result" data-rating="<%= review.rating %>"></p>
-                        </div>
-                        <p class="card-text"><%= review.body %> </p>
-                        <small class="card-text">Submitted by <%= review.author.username %></small>
-                        <% if (currentUser && review.author.equals(currentUser._id)) { %>
-                            <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                                <button class="btn btn-sm btn-danger">Delete</button>
-                            </form>
-                        <% } %>
-                    </div>
+                    <% } %>
                 </div>
-            <% } %>
-        </div>
-    </div>
+            </div>
     <script>
         const campground = <%- JSON.stringify(campground) %>
         const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
